# nextpnr-chipdb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ecp5/: family.cmake
ice40/: family.cmake
